--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,14 @@
     transform: rotate(360deg);
   }
 }
+
+
+.redirection{
+  display:flex;
+  width:100vw;
+  height:100vh;
+  justify-content: center;
+  align-items:center;
+  font-size:5rem;
+  color:white;
+}
